--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         }
     </style>
 </head>
-<body class="flex items-center justify-center min-h-screen p-4">
+<body class="bg-gray-50">
 
-    <div class="w-full max-w-4xl mx-auto">
-        <header class="text-center mb-8">
+    <div class="container mx-auto p-4 sm:p-6 lg:p-8 min-h-screen flex flex-col items-center justify-center">
+        <header class="text-center mb-8 w-full max-w-4xl">
             <h1 class="text-4xl font-extrabold text-gray-800">UIU CGPA Calculator</h1>
             <p class="text-gray-500 mt-2">Instantly calculate your CGPA and plan your recovery if needed.</p>
         </header>
 
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+        <div class="w-full max-w-4xl grid grid-cols-1 lg:grid-cols-2 gap-8">
             <!-- Left Side: Input -->
             <div class="bg-white p-6 md:p-8 rounded-2xl shadow-lg border border-gray-200">
                 <h2 class="text-2xl font-bold text-gray-800 mb-6 border-b pb-4">Academic Information</h2>
@@ -311,7 +311,7 @@
                     targetResultCard = resultGood;
                     const titleEl = document.getElementById('good-standing-title');
                     if (cgpa >= 3.8) {
-                        titleEl.textContent = "🎓 তুখোড় ইশটুডেন্ট!";
+                        titleEl.textContent = "🎓 ตุখোড় ইশটুডেন্ট!";
                     } else if (cgpa >= 3.5) {
                         titleEl.textContent = "💸 ওয়েভারওয়ালা!";
                     } else {
