Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
                     targetResultCard = resultGood;
                     const titleEl = document.getElementById('good-standing-title');
                     if (cgpa >= 3.8) {
-                        titleEl.textContent = "তুখোড় ইশটুডেন্ট!🎓";
+                        titleEl.textContent = "তুখোড় ইশটুডেন্ট!🎓";
                     } else if (cgpa >= 3.5) {
-                        titleEl.textContent = "ওয়েভারওয়ালা!💸";
+                        titleEl.textContent = "ওয়েভারওয়ালা!💸";
                     } else {
                         titleEl.textContent = "৩.০০ ধরে রাখেন!😅";
                     }
@@ -420,7 +420,7 @@
                     } else if (cgpa >= 2.2) {
                         titleEl.textContent = "রেড জোনে আছেন!🚨";
                     } else {
-                        titleEl.textContent = "আরেকটু হলেই লেটার ধরিয়ে দেবে!📉";
+                        titleEl.textContent = "আরেকটু হলেই লেটার ধরিয়ে দেবে!📉";
                     }
                     document.getElementById('cgpa-mid').textContent = cgpa.toFixed(3);
                     document.getElementById('total-credits-mid').textContent = currentTotalCredits.toFixed(2).replace(/\.00$/, '');
@@ -471,5 +471,4 @@
 
 </body>
 </html>
-
 
