--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                     if (finalCgpa >= 3.8) titleEl.textContent = "তুখোড় ইশটুডেন্ট! 🎓";
                     else if (finalCgpa >= 3.5) titleEl.textContent = "ওয়েভারওয়ালা! 💸";
                     else if (finalCgpa >= 3.2) titleEl.textContent = "সেইফ জোনে আছেন 😌";
-                    else titleEl.textContent = "৩.০০ টা ধরে রাখেন! 😅";
+                    else titleEl.textContent = "৩.০০ ধরে রাখেন! 😅";
                     document.getElementById('cgpa-good').textContent = finalCgpa.toFixed(3);
                     document.getElementById('total-credits-good').textContent = currentTotalCredits.toFixed(2).replace(/\.00$/, '');
                 } else if (finalCgpa >= 2.0) {
@@ -544,4 +544,5 @@
 
 </body>
 </html>
+
 
