Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
                     if (finalCgpa >= 3.8) titleEl.textContent = "তুখোড় ইশটুডেন্ট! 🎓";
                     else if (finalCgpa >= 3.5) titleEl.textContent = "ওয়েভারওয়ালা! 💸";
                     else if (finalCgpa >= 3.2) titleEl.textContent = "সেইফ জোনে আছেন 😌";
-                    else titleEl.textContent = "৩.০০ টা ধরে রাখেন! 😅";
+                    else titleEl.textContent = "সিজি ৩.০০ ধরে রাখেন! 😅";
                     document.getElementById('cgpa-good').textContent = finalCgpa.toFixed(2);
                     document.getElementById('total-credits-good').textContent = totalEarnedCreditsForDisplay.toFixed(2).replace(/\.00$/, '');
                     document.getElementById('tgpa-good').textContent = trimesterGpa.toFixed(2);
@@ -609,4 +609,5 @@
 
 </body>
 </html>
+
 
