--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 const completedCredits = parseFloat(completedCreditsInput.value);
 
                 if (currentCgpaInput.value && (currentCgpa > 4.00 || currentCgpa < 0)) {
-                    cgpaErrorEl.textContent = "সিজি ৪ এর বেশি হয় না ভাই";
+                    cgpaErrorEl.textContent = "Aeh! 🙂)";
                     cgpaErrorEl.classList.remove('hidden');
                     return;
                 }
@@ -609,5 +609,6 @@
 
 </body>
 </html>
+
 
 
