Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 const completedCredits = parseFloat(completedCreditsInput.value);
 
                 if (currentCgpaInput.value && (currentCgpa > 4.00 || currentCgpa < 0)) {
-                    cgpaErrorEl.textContent = "Aeh! 🙂)";
+                    cgpaErrorEl.textContent = "Aeh! 🙂";
                     cgpaErrorEl.classList.remove('hidden');
                     return;
                 }
@@ -609,6 +609,7 @@
 
 </body>
 </html>
+
 
 
 
