--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
             </div>
         </div>
         <footer class="text-center mt-8 text-sm text-secondary-color font-semibold">
-            <p>Developed by Naimur Rahman (CSE 242) for the students of UIU❤️</p>
+            <p>Developed by <a href="https://www.facebook.com/naiimurr" target="_blank" rel="noopener noreferrer" class="text-indigo-500 hover:underline">Naimur Rahman</a> (CSE 242) for the students of UIU❤️</p>
         </footer>
     </main>
 
@@ -768,3 +768,4 @@
 
 </body>
 </html>
+
