Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -336,6 +336,10 @@
                             <option value="2.67">B- (2.67)</option>
                             <option value="2.33">C+ (2.33)</option>
                             <option value="2.00">C (2.00)</option>
+                            <option value="1.67">C- (1.67)</option>
+                            <option value="1.33">D+ (1.33)</option>
+                            <option value="1.00">D (1.00)</option>
+                            <option value="0.00">F (0.00)</option>
                         </select>
                     </div>
                     <button type="submit" class="w-full btn btn-secondary"><i data-lucide="repeat" class="w-5 h-5"></i>Add Retake</button>
@@ -889,4 +893,5 @@
     </script>
 </body>
 </html>
+
 
