--- a/index.html
+++ b/index.html
@@ -481,8 +481,15 @@
                 <p class="text-secondary-color font-medium mt-2">Instantly calculate your CGPA and plan your academic future.</p>
             </div>
 
-            <div class="form-section">
-                <h2 class="text-xl font-bold text-primary-color mb-4">Current Academic Standing <span class="text-sm font-normal text-secondary-color">(Optional)</span></h2>
+            <div class="mb-8 flex justify-center border-b border-gray-200 dark:border-gray-700">
+                <button id="cgpa-tab-btn" class="px-4 py-2 text-sm font-medium text-indigo-600 dark:text-indigo-400 border-b-2 border-indigo-500">CGPA Calculator</button>
+                <button id="course-grade-tab-btn" class="px-4 py-2 text-sm font-medium text-gray-500 dark:text-gray-400 border-b-2 border-transparent hover:text-gray-700 dark:hover:text-gray-200">Course Grade</button>
+                <button id="grading-policy-tab-btn" class="px-4 py-2 text-sm font-medium text-gray-500 dark:text-gray-400 border-b-2 border-transparent hover:text-gray-700 dark:hover:text-gray-200">Grading Policy</button>
+            </div>
+
+            <div id="cgpa-calculator-tab">
+                <div class="form-section">
+                    <h2 class="text-xl font-bold text-primary-color mb-4">Current Academic Standing <span class="text-sm font-normal text-secondary-color">(Optional)</span></h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 items-end"> 
                     <div>
                         <label for="current-cgpa" class="block text-sm font-medium text-tertiary-color mb-2">Current CGPA</label>
@@ -706,6 +713,75 @@
                     </div>
                 </div>
             </div>
+            </div>
+            <div id="course-grade-tab" style="display: none;">
+                <div class="form-section">
+                    <h2 class="text-xl font-bold text-primary-color mb-4">Course Grade Calculator</h2>
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 items-end">
+                        <div>
+                            <label for="assignment-marks" class="block text-sm font-medium text-tertiary-color mb-2">Assignment (out of 5)</label>
+                            <input type="number" id="assignment-marks" step="0.1" min="0" max="5" class="w-full form-input" placeholder="e.g., 4.5">
+                        </div>
+                        <div>
+                            <label for="attendance-marks" class="block text-sm font-medium text-tertiary-color mb-2">Attendance (out of 5)</label>
+                            <input type="number" id="attendance-marks" step="0.1" min="0" max="5" class="w-full form-input" placeholder="e.g., 5">
+                        </div>
+                        <div>
+                            <label for="midterm-marks" class="block text-sm font-medium text-tertiary-color mb-2">Midterm (out of 30)</label>
+                            <input type="number" id="midterm-marks" step="0.1" min="0" max="30" class="w-full form-input" placeholder="e.g., 25">
+                        </div>
+                        <div>
+                            <label for="final-marks" class="block text-sm font-medium text-tertiary-color mb-2">Final (out of 40)</label>
+                            <input type="number" id="final-marks" step="0.1" min="0" max="40" class="w-full form-input" placeholder="e.g., 32">
+                        </div>
+                    </div>
+                </div>
+                <div class="form-section">
+                    <h2 class="text-xl font-bold text-primary-color mb-4">CT Marks <span class="text-sm font-normal text-secondary-color">(Best 3)</span></h2>
+                    <div id="ct-marks-container" class="space-y-2"></div>
+                    <button id="add-ct-mark-btn" class="w-full btn btn-neutral mt-4"><i data-lucide="plus" class="w-5 h-5"></i>Add CT Mark</button>
+                    <div id="target-ct-result" class="mt-4 text-center hidden">
+                        <p id="required-ct-marks" class="text-3xl font-bold text-indigo-600"></p>
+                    </div>
+                </div>
+                <button id="calculate-course-grade" class="w-full btn btn-main-calc"><i data-lucide="bar-chart-2" class="w-6 h-6"></i>Calculate Grade</button>
+                <div id="course-grade-result-section" class="mt-8 text-center" style="display: none;">
+                    <p class="text-lg text-secondary-color">Your Grade:</p>
+                    <p id="course-grade-display" class="text-5xl font-bold text-primary-color"></p>
+                    <p id="course-points-display" class="text-2xl text-tertiary-color"></p>
+                    <p id="course-marks-display" class="text-lg text-secondary-color"></p>
+                    <p class="text-sm text-red-500 mt-2">Without Grace Mark</p>
+                </div>
+            </div>
+            <div id="grading-policy-tab" style="display: none;">
+                <div class="form-section">
+                    <h2 class="text-xl font-bold text-primary-color mb-4 text-center">UIU Grading Policy</h2>
+                    <div class="overflow-x-auto">
+                        <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+                            <thead class="bg-gray-50 dark:bg-gray-800">
+                                <tr>
+                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Letter Grade</th>
+                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Grade Points</th>
+                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Marks Range (%)</th>
+                                </tr>
+                            </thead>
+                            <tbody class="bg-white dark:bg-gray-900 divide-y divide-gray-200 dark:divide-gray-700">
+                                <tr class="dark:bg-gray-800 dark:text-gray-200"><td class="px-6 py-4 whitespace-nowrap">A</td><td class="px-6 py-4 whitespace-nowrap">4.00</td><td class="px-6 py-4 whitespace-nowrap">90 – 100</td></tr>
+                                <tr class="dark:bg-gray-800 dark:text-gray-200"><td class="px-6 py-4 whitespace-nowrap">A-</td><td class="px-6 py-4 whitespace-nowrap">3.67</td><td class="px-6 py-4 whitespace-nowrap">86 – 89</td></tr>
+                                <tr class="dark:bg-gray-800 dark:text-gray-200"><td class="px-6 py-4 whitespace-nowrap">B+</td><td class="px-6 py-4 whitespace-nowrap">3.33</td><td class="px-6 py-4 whitespace-nowrap">82 – 85</td></tr>
+                                <tr class="dark:bg-gray-800 dark:text-gray-200"><td class="px-6 py-4 whitespace-nowrap">B</td><td class="px-6 py-4 whitespace-nowrap">3.00</td><td class="px-6 py-4 whitespace-nowrap">78 – 81</td></tr>
+                                <tr class="dark:bg-gray-800 dark:text-gray-200"><td class="px-6 py-4 whitespace-nowrap">B-</td><td class="px-6 py-4 whitespace-nowrap">2.67</td><td class="px-6 py-4 whitespace-nowrap">74 – 77</td></tr>
+                                <tr class="dark:bg-gray-800 dark:text-gray-200"><td class="px-6 py-4 whitespace-nowrap">C+</td><td class="px-6 py-4 whitespace-nowrap">2.33</td><td class="px-6 py-4 whitespace-nowrap">70 – 73</td></tr>
+                                <tr class="dark:bg-gray-800 dark:text-gray-200"><td class="px-6 py-4 whitespace-nowrap">C</td><td class="px-6 py-4 whitespace-nowrap">2.00</td><td class="px-6 py-4 whitespace-nowrap">66 – 69</td></tr>
+                                <tr class="dark:bg-gray-800 dark:text-gray-200"><td class="px-6 py-4 whitespace-nowrap">C-</td><td class="px-6 py-4 whitespace-nowrap">1.67</td><td class="px-6 py-4 whitespace-nowrap">62 – 65</td></tr>
+                                <tr class="dark:bg-gray-800 dark:text-gray-200"><td class="px-6 py-4 whitespace-nowrap">D+</td><td class="px-6 py-4 whitespace-nowrap">1.33</td><td class="px-6 py-4 whitespace-nowrap">58 – 61</td></tr>
+                                <tr class="dark:bg-gray-800 dark:text-gray-200"><td class="px-6 py-4 whitespace-nowrap">D</td><td class="px-6 py-4 whitespace-nowrap">1.00</td><td class="px-6 py-4 whitespace-nowrap">55 – 57</td></tr>
+                                <tr class="dark:bg-gray-800 dark:text-gray-200"><td class="px-6 py-4 whitespace-nowrap">F</td><td class="px-6 py-4 whitespace-nowrap">0.00</td><td class="px-6 py-4 whitespace-nowrap">0 – 54</td></tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
         <footer class="text-center mt-8 text-sm text-secondary-color font-semibold">
             <p>Developed by <a href="https://www.facebook.com/naiimurr" target="_blank" rel="noopener noreferrer" class="text-indigo-400 hover:underline">Naimur Rahman</a> (CSE 242) for the students of UIU❤️</p>
@@ -849,6 +925,151 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
+            // --- Course Grade Calculator Elements --- //
+            const addCtMarkBtn = document.getElementById('add-ct-mark-btn');
+            const ctMarksContainer = document.getElementById('ct-marks-container');
+            const calculateCourseGradeBtn = document.getElementById('calculate-course-grade');
+            const targetCtResultEl = document.getElementById('target-ct-result');
+            const requiredCtMarksEl = document.getElementById('required-ct-marks');
+            const courseGradeResultSection = document.getElementById('course-grade-result-section');
+            const courseGradeDisplay = document.getElementById('course-grade-display');
+            const coursePointsDisplay = document.getElementById('course-points-display');
+            const courseMarksDisplay = document.getElementById('course-marks-display');
+
+            let ctMarks = [];
+
+            const calculateTargetCt = () => {
+                const enteredMarks = Array.from(ctMarksContainer.querySelectorAll('input')).map(input => {
+                    const val = parseFloat(input.value);
+                    return isNaN(val) ? null : val;
+                });
+                const validMarks = enteredMarks.filter(s => s !== null);
+
+                if (validMarks.length < 3) {
+                    targetCtResultEl.classList.add('hidden');
+                    return;
+                }
+
+                let bestMarks;
+                if (validMarks.length === 3) {
+                    bestMarks = validMarks;
+                } else { // length is 4
+                    const sortedMarks = [...validMarks].sort((a, b) => b - a);
+                    bestMarks = sortedMarks.slice(0, 3);
+                }
+
+                const currentCtMarks = bestMarks.reduce((a, b) => a + b, 0) / 3;
+
+                targetCtResultEl.classList.remove('hidden');
+                const finalCtMarks = Math.min(currentCtMarks, 20);
+                requiredCtMarksEl.textContent = `Your final CT mark is ${finalCtMarks.toFixed(2)} / 20`;
+            };
+
+            addCtMarkBtn.addEventListener('click', () => {
+                const ctInputs = ctMarksContainer.getElementsByTagName('input');
+                if (ctInputs.length >= 4) {
+                    showNotification("You can add a maximum of 4 CT marks.", 'error');
+                    return;
+                }
+                const newIndex = ctInputs.length;
+                const ctInputContainer = document.createElement('div');
+                ctInputContainer.className = 'flex items-center gap-2';
+                ctInputContainer.innerHTML = `
+                    <label for="ct-mark-${newIndex}" class="block text-sm font-medium text-tertiary-color text-center">CT ${newIndex + 1}<br>(out of 20)</label>
+                    <input type="number" id="ct-mark-${newIndex}" step="0.1" min="0" max="20" class="w-full form-input ct-mark-input" placeholder="e.g., 18">
+                     <button class="remove-ct-btn text-red-400 hover:text-red-600 p-2 rounded-full transition-colors"><i data-lucide="trash-2" class="w-5 h-5"></i></button>
+                `;
+                ctMarksContainer.appendChild(ctInputContainer);
+                lucide.createIcons();
+
+                const newCtInput = ctInputContainer.querySelector('.ct-mark-input');
+                newCtInput.addEventListener('input', () => {
+                    if (parseFloat(newCtInput.value) > 20) {
+                        newCtInput.value = '20';
+                        showNotification("Maximum CT mark is 20.", "warning");
+                    }
+                    calculateTargetCt();
+                });
+                 ctInputContainer.querySelector('.remove-ct-btn').addEventListener('click', () => {
+                    ctInputContainer.remove();
+                    // Re-label inputs
+                    const remainingInputs = ctMarksContainer.querySelectorAll('.flex');
+                    remainingInputs.forEach((container, index) => {
+                         container.querySelector('label').textContent = `CT ${index + 1} (out of 20)`;
+                         container.querySelector('label').setAttribute('for', `ct-mark-${index}`);
+                         container.querySelector('input').setAttribute('id', `ct-mark-${index}`);
+                    });
+                    calculateTargetCt();
+                });
+                calculateTargetCt();
+            });
+
+            calculateCourseGradeBtn.addEventListener('click', () => {
+                const assignment = parseFloat(document.getElementById('assignment-marks').value) || 0;
+                const attendance = parseFloat(document.getElementById('attendance-marks').value) || 0;
+                const midterm = parseFloat(document.getElementById('midterm-marks').value) || 0;
+                const final = parseFloat(document.getElementById('final-marks').value) || 0;
+                const ctInputs = Array.from(ctMarksContainer.querySelectorAll('.ct-mark-input'));
+                const ctMarks = ctInputs.map(input => parseFloat(input.value) || 0);
+
+                if (ctMarks.length < 3) {
+                    showNotification("Please enter at least 3 CT marks.", "error");
+                    return;
+                }
+
+                const sortedMarks = [...ctMarks].sort((a, b) => b - a);
+                const bestThreeMarks = sortedMarks.slice(0, 3);
+                const avgCtMark = bestThreeMarks.reduce((a, b) => a + b, 0) / 3;
+
+                const totalMarks = assignment + attendance + midterm + final + avgCtMark;
+
+                let grade = '', points = 0.00;
+                if (totalMarks >= 90) { grade = 'A'; points = 4.00; }
+                else if (totalMarks >= 86) { grade = 'A-'; points = 3.67; }
+                else if (totalMarks >= 82) { grade = 'B+'; points = 3.33; }
+                else if (totalMarks >= 78) { grade = 'B'; points = 3.00; }
+                else if (totalMarks >= 74) { grade = 'B-'; points = 2.67; }
+                else if (totalMarks >= 70) { grade = 'C+'; points = 2.33; }
+                else if (totalMarks >= 66) { grade = 'C'; points = 2.00; }
+                else if (totalMarks >= 62) { grade = 'C-'; points = 1.67; }
+                else if (totalMarks >= 58) { grade = 'D+'; points = 1.33; }
+                else if (totalMarks >= 55) { grade = 'D'; points = 1.00; }
+                else { grade = 'F'; points = 0.00; }
+
+                courseGradeDisplay.textContent = grade;
+                coursePointsDisplay.textContent = `(${points.toFixed(2)} Points)`;
+                courseMarksDisplay.textContent = `Total Marks: ${totalMarks.toFixed(2)} / 100`;
+                courseGradeResultSection.style.display = 'block';
+            });
+
+            // --- Tab Switching Logic --- //
+            const cgpaTabBtn = document.getElementById('cgpa-tab-btn');
+            const courseGradeTabBtn = document.getElementById('course-grade-tab-btn');
+            const gradingPolicyTabBtn = document.getElementById('grading-policy-tab-btn');
+
+            const cgpaCalculatorTab = document.getElementById('cgpa-calculator-tab');
+            const courseGradeTab = document.getElementById('course-grade-tab');
+            const gradingPolicyTab = document.getElementById('grading-policy-tab');
+
+            const allTabs = [cgpaCalculatorTab, courseGradeTab, gradingPolicyTab];
+            const allTabBtns = [cgpaTabBtn, courseGradeTabBtn, gradingPolicyTabBtn];
+
+            const switchTab = (tabToShow, btnToActivate) => {
+                allTabs.forEach(tab => tab.style.display = 'none');
+                allTabBtns.forEach(btn => {
+                    btn.classList.remove('text-indigo-600', 'dark:text-indigo-400', 'border-indigo-500');
+                    btn.classList.add('text-gray-500', 'dark:text-gray-400', 'border-transparent');
+                });
+
+                tabToShow.style.display = 'block';
+                btnToActivate.classList.add('text-indigo-600', 'dark:text-indigo-400', 'border-indigo-500');
+                btnToActivate.classList.remove('text-gray-500', 'dark:text-gray-400', 'border-transparent');
+            };
+
+            cgpaTabBtn.addEventListener('click', () => switchTab(cgpaCalculatorTab, cgpaTabBtn));
+            courseGradeTabBtn.addEventListener('click', () => switchTab(courseGradeTab, courseGradeTabBtn));
+            gradingPolicyTabBtn.addEventListener('click', () => switchTab(gradingPolicyTab, gradingPolicyTabBtn));
+
             // --- Elements (Combined) --- //
             const getEl = (id) => document.getElementById(id);
             const body = document.body;
@@ -1331,4 +1552,3 @@
     </script>
 </body>
 </html>
-
