--- a/index.html
+++ b/index.html
@@ -490,12 +490,12 @@
                         <p id="cgpa-error" class="text-red-500 text-sm error-placeholder"></p>
                     </div>
                     <div>
-                        <label for="completed-credits" class="block text-sm font-medium text-tertiary-color mb-2">Total Credits Attempted<br>(Incl. F grades)</label>
+                        <label for="completed-credits" class="block text-sm font-medium text-tertiary-color mb-2">Total Credits Attempted (Incl. F grades)</label>
                         <input type="number" id="completed-credits" step="0.5" min="0" class="w-full form-input" placeholder="e.g., 90">
                         <p id="attempted-credits-error" class="error-placeholder text-red-500 text-sm"></p>
                     </div>
                     <div>
-                        <label for="completed-earned-credits" class="block text-sm font-medium text-tertiary-color mb-2">Total Credits Earned<br>(Before this Tri.)</label>
+                        <label for="completed-earned-credits" class="block text-sm font-medium text-tertiary-color mb-2">Total Credits Earned (Before this Tri.)</label>
                         <input type="number" id="completed-earned-credits" step="0.5" min="0" class="w-full form-input" placeholder="e.g., 85">
                         <p id="earned-credits-error" class="error-placeholder text-red-500 text-sm"></p>
                     </div>
