--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -990,7 +991,7 @@
                 if (validScores.length === 3) {
                      requiredCtMarksEl.textContent = `Current Best 3 Avg: ${currentCtAvg.toFixed(2)} / 20`;
                 } else if (validScores.length === 4) {
-                    requiredCtMarksEl.textContent = `Final CT Mark (Best 3): ${currentCtAvg.toFixed(2)} / 20`;
+                     requiredCtMarksEl.textContent = `Final CT Mark (Best 3): ${currentCtAvg.toFixed(2)} / 20`;
                 }
             };
 
@@ -1027,9 +1028,9 @@
                     // Re-label inputs
                     const remainingInputs = ctScoresContainer.querySelectorAll('.flex');
                     remainingInputs.forEach((container, index) => {
-                         container.querySelector('label').textContent = `CT ${index + 1} (20)`;
-                         container.querySelector('label').setAttribute('for', `ct-score-${index}`);
-                         container.querySelector('input').setAttribute('id', `ct-score-${index}`);
+                        container.querySelector('label').textContent = `CT ${index + 1} (20)`;
+                        container.querySelector('label').setAttribute('for', `ct-score-${index}`);
+                        container.querySelector('input').setAttribute('id', `ct-score-${index}`);
                     });
                     calculateTargetCt();
                 });
@@ -1349,7 +1350,15 @@
                 
                 if (courses.length === 0) { if (!hasError) { calcErrorEl.textContent = "Please add at least one course."; calcErrorEl.classList.remove('hidden'); } hasError = true; }
                 const trimesterCredits = courses.reduce((total, course) => total + course.credit, 0);
-                if (!hasError && courses.length > 0 && trimesterCredits < 6) { calcErrorEl.textContent = "Minimum 6 trimester credits required."; calcErrorEl.classList.remove('hidden'); hasError = true; }
+
+                // --- MODIFIED CODE BLOCK ---
+                // This block now shows a warning instead of stopping the calculation.
+                if (!hasError && courses.length > 0 && trimesterCredits < 6) {
+                    showNotification("Note: Trimester has less than 6 credits.", 'warning');
+                    // We no longer set hasError = true, which allows the calculation to proceed.
+                }
+                // --- END OF MODIFICATION ---
+
                 const hasRetakes = courses.some(c => c.type === 'retake');
                 if (!hasError && hasRetakes && !isInitialStandingComplete) {
                     calcErrorEl.textContent = hasInitialStandingAttempt ? "Enter complete & valid Current Standing for retakes." : "Enter Current Standing to add retake courses.";
@@ -1615,3 +1624,4 @@
     </script>
 </body>
 </html>
+```
