--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
                 // --- MODIFIED CODE BLOCK ---
                 // This block now shows a warning instead of stopping the calculation.
                 if (!hasError && courses.length > 0 && trimesterCredits < 6) {
-                    showNotification("Note: Trimester has less than 6 credits.", 'warning');
+                    showNotification("Trimester has less than 6 credits.", 'warning');
                     // We no longer set hasError = true, which allows the calculation to proceed.
                 }
                 // --- END OF MODIFICATION ---
@@ -1624,3 +1624,4 @@
     </script>
 </body>
 </html>
+
